# naleystogramm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.sh  deploy.sh  naleystogramm.desktop
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  naleystogramm
build-linux/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-linux/naleystogramm_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-linux/naleystogramm_autogen/IYECXEJARV/: moc_addcontactdialog.cpp  moc_addcontactdialog.cpp.d  moc_incomingdialog.cpp  moc_incomingdialog.cpp.d
build-linux/naleystogramm_autogen/MZW7AAAGJO/: moc_e2e.cpp  moc_e2e.cpp.d
build-linux/naleystogramm_autogen/PRMOGMWJPH/: moc_demomode.cpp  moc_demomode.cpp.d  moc_filetransfer.cpp  moc_filetransfer.cpp.d  moc_network.cpp  moc_network.cpp.d  moc_sessionmanager.cpp  moc_sessionmanager.cpp.d  moc_storage.cpp  moc_storage.cpp.d  moc_updatechecker.cpp  moc_updatechecker.cpp.d  moc_upnp.cpp  moc_upnp.cpp.d
build-linux/naleystogramm_autogen/YPKJ5OE7LN/: moc_chatwidget.cpp  moc_chatwidget.cpp.d  moc_contactswidget.cpp  moc_contactswidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_settingspanel.cpp  moc_settingspanel.cpp.d  moc_thememanager.cpp  moc_thememanager.cpp.d  moc_updatebanner.cpp  moc_updatebanner.cpp.d
build-linux/naleystogramm_autogen/include/: chatwidget.moc  chatwidget.moc.d  ui_mainwindow.h
cmake/: toolchain-mingw64.cmake
installer/: CMakeLists.txt  download.c  download.h  extract.c  extract.h  firewall.c  firewall.h  inflate.h  install.c  install.h  install.ps1  installer.c  installer.h  installer.manifest  installer.rc  registry.c  registry.h  shortcuts.c  shortcuts.h  strings.c  strings.h  uninstall.c  uninstall.h
resources/: resources.qrc
resources/windows/: app.manifest  app.rc
scripts/: make_appimage.sh
src/: main.cpp
src/core/: app.cpp  app.h  audiorecorder.cpp  audiorecorder.h  callmanager.cpp  callmanager.h  demomode.cpp  demomode.h  device_pairing.cpp  device_pairing.h  filetransfer.cpp  filetransfer.h  groupmanager.cpp  groupmanager.h  identity.cpp  identity.h  logger.cpp  logger.h  network.cpp  network.h  no_qt.h  remoteshellmanager.cpp  remoteshellmanager.h  sessionmanager.cpp  sessionmanager.h  shellprocess.h  storage.cpp  storage.h  systeminfo.cpp  systeminfo.h  types.h  updatechecker.cpp  updatechecker.h  upnp.cpp  upnp.h  versionutils.h
src/core/calls/: callmanager.cpp  callmanager.h
src/core/diag/: demomode.cpp  logger.h  updatechecker.cpp  updatechecker.h
src/core/identity/: identity.cpp  identity.h
src/core/net/: groupmanager.cpp  groupmanager.h  network.cpp  network.h  upnp.cpp
src/core/shell/: remoteshellmanager.cpp  remoteshellmanager.h  shellprocess.cpp  shellprocess.h
src/core/storage/: sessionmanager.h  storage.cpp  storage.h
src/core/transfer/: filetransfer.cpp  filetransfer.h
src/crypto/: bytes.h  e2e.cpp  e2e.h  keyprotector.cpp  keyprotector.h  qt_bridge.h  ratchet.cpp  ratchet.h  securedata.h  x3dh.cpp  x3dh.h
src/glui/: core_bridge.cpp  core_bridge.h  main.cpp  renderer.cpp  renderer.h  theme.cpp  theme.h  window.cpp  window.h
src/glui/widgets/: button.cpp  button.h
src/media/: mediaengine.cpp  mediaengine.h
src/platform/: windowsfirewall.cpp  windowsfirewall.h
src/plugins/: iplugin.h  pluginformat.cpp  pluginformat.h  pluginmanager.cpp  pluginmanager.h
src/ui/: callwindow.cpp  callwindow.h  chatwidget.cpp  chatwidget.h  clisession.cpp  clisession.h  contactswidget.cpp  contactswidget.h  customthememanager.cpp  customthememanager.h  filetransferwidget.cpp  filetransferwidget.h  groupchatwidget.cpp  groupchatwidget.h  logpanel.cpp  logpanel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrcodewidget.cpp  qrcodewidget.h  settingspanel.cpp  settingspanel.h  shellmonitor.cpp  shellmonitor.h  shellwindow.cpp  shellwindow.h  sidedrawer.cpp  sidedrawer.h  splashscreen.cpp  splashscreen.h  thememanager.cpp  thememanager.h  toggleswitch.cpp  toggleswitch.h  updatebanner.cpp  updatebanner.h  voicewaveform.cpp  voicewaveform.h  wheelfilter.h
src/ui/dialogs/: addcontactdialog.cpp  addcontactdialog.h  contactprofiledialog.cpp  contactprofiledialog.h  devicelinkdialog.cpp  devicelinkdialog.h  devicepairingdialog.cpp  devicepairingdialog.h  fileacceptdialog.cpp  fileacceptdialog.h  incomingdialog.cpp  incomingdialog.h  joingroupdialog.cpp  joingroupdialog.h  settingsdialog.cpp  settingsdialog.h
src/ui/settings/: settingshelpers.h  settingspage_debug.cpp  settingspage_debug.h  settingspage_demo.cpp  settingspage_demo.h  settingspage_devices.cpp  settingspage_devices.h  settingspage_interface.cpp  settingspage_interface.h  settingspage_main.cpp  settingspage_main.h  settingspage_network.cpp  settingspage_network.h  settingspage_plugins.cpp  settingspage_plugins.h  settingspage_privacy.cpp  settingspage_privacy.h  settingspage_profile.cpp  settingspage_profile.h  settingspage_security.cpp  settingspage_security.h  settingspage_updates.cpp  settingspage_updates.h  settingspagebase.h
translations/: naleystogramm_be.ts  naleystogramm_de.ts  naleystogramm_en.ts  naleystogramm_ru.ts  naleystogramm_uk.ts
